styles.css: Fuente principal añadida

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
   }
   
   :root {
-    --font-family: sans-serif;
+    --font-family: "Quicksand", sans-serif;
     --primary-color: #4d869c;
     --secondary-color: #7ab2b2;
     --light-color: #eef7ff;
