--- a/src/auth/pages/styles/LoginPage.css
+++ b/src/auth/pages/styles/LoginPage.css
@@ -4,6 +4,7 @@
   }
   
   .form-container.flex {
+    width: 400px;
     padding: 1.9rem 1.3rem;
     height: auto;
     background-color: var(--light-secondary-color);
@@ -17,6 +18,7 @@
   .form-container h2 {
     margin-bottom: 1.2rem;
     letter-spacing: 1px;
+    font-size: 30px;
   }
   
   .user-data {
@@ -24,7 +26,7 @@
   }
   
   .user-data p {
-    font-size: 12px;
+    font-size: 15px;
   }
   
   .input-container {
@@ -34,27 +36,29 @@
   }
   
   .input-container label {
-    font-size: 12px;
+    font-size: 14px;
     margin-bottom: 0.3rem;
   }
   
   .input-container input {
     padding: 0.125rem 0.4rem;
+    font-size: 14px;
+    height: 35px;
   }
   
   .form-container button {
     width: 100%;
-    font-size: 12px;
+    font-size: 16px;
     margin: 0px auto;
     margin-top: 12px;
     outline: none;
     background-color: var(--primary-color);
     border: none;
     color: #fff;
-    padding: 0.3rem 0.4rem;
+    padding: 0.4rem 0.4rem;
     border-radius: 2px;
     cursor: pointer;
-    transition: all 0.6s linear;
+    transition: all 300ms ease-in-out;
   }
   
   .form-container button:hover {
@@ -63,7 +67,13 @@
   
   form .error-login {
     margin-top: 5px;
-    font-size: 11px;
+    font-size: 14px;
     color: red;
   }
   
+    /* Small devices (landscape phones, less than 768px) */
+    @media (max-width: 575.98px) {
+      .form-container.flex {
+        width: 80%;
+      }
+    }
